[gd_scene load_steps=3 format=3 uid="uid://ddijux01auw08"]

[ext_resource type="Script" path="res://Scripts/Scene/trash.gd" id="1_br4vd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jmlbn"]
size = Vector2(37.75, 39)

[node name="trash" type="Area2D"]
collision_layer = 4
script = ExtResource("1_br4vd")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_jmlbn")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
